@@ -195,6 +195,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * Show user preference 'Use live preview' if $wgLivePreview is enabled only
 * (bug 17014) Blocked users can no longer use Special:UserRights if they do
   not have the 'userrights' permission.
+* (bug 19294) Always show Sp-contributions-footer(-anon)
 
 == API changes in 1.16 ==
 
